have randomizer.  working on making functions to light up buttons squencially

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <button class="color-button" id="green">Green</button>
 <button class="color-button" id="blue">Blue</button>
 <button class="color-button" id="yellow">Yellow</button>
-<button class="start-button" id="idOftart">Start</button>
+<button class="start-button" id="idOfStart">Start</button>
 
 <script>
     "use strict"
