--- a/public/index.html
+++ b/public/index.html
@@ -5,34 +5,24 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/simplesimon.css">
-
-
-
 </head>
 <body>
+<p id="stage"></p>
+<div>
+    <button class="circle color-button" id="red">Red</button>
+    <button class="circle color-button" id="blue">Blue</button>
+</div>
+<div>
+    <button class="circle color-button" id="green">Green</button>
+    <button class="circle color-button" id="yellow">Yellow</button>
+</div>
+<div>
+    <button class="start-button" id="idOfStart">Start</button>
+</div>
 
-<button class="color-button" id="red">Red</button>
-<button class="color-button" id="green">Green</button>
-<button class="color-button" id="blue">Blue</button>
-<button class="color-button" id="yellow">Yellow</button>
-<button class="start-button" id="idOfStart">Start</button>
 
 <script>
     "use strict"
-
-
-// select all colors - done
-// console log - done
-// random number between 0-3
-// pass random number to array
-// console.log selected div with index
-
-
-
-
-
-
-
 </script>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="/js/simplesimon.js"></script>
