--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,43 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/simplesimon.css">
+    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<p id="stage"></p>
+<p id="stage">Level 1</p>
+<img class="failPanda" src="/img/fail.gif" style="width: 100%; height: 100%;">
 <div>
-    <button class="circle color-button" id="red">Red</button>
-    <button class="circle color-button" id="blue">Blue</button>
+    <div id="topRow">
+        <button class="circle color-button" id="red">Red</button>
+        <button class="circle color-button" id="blue">Blue</button>
+    </div>
+    <div id="bottomRow">
+        <button class="circle color-button" id="green">Green</button>
+        <button class="circle color-button" id="yellow">Yellow</button>
+    </div>
 </div>
 <div>
-    <button class="circle color-button" id="green">Green</button>
-    <button class="circle color-button" id="yellow">Yellow</button>
-</div>
-<div>
+
     <button class="start-button" id="idOfStart">Start</button>
+</div>
+
+<div class="swirlyDoodle holder">
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
 </div>
 
 
